--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # tobias-huelden
+  linkedin         :  tobias-huelden
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
