--- a/_config.yml
+++ b/_config.yml
@@ -75,13 +75,13 @@ author:
   zhihu            : # Username
 
 # Publication Category - The following the list of publication categories and their headings
-publication_category:
-  books:
-    title: 'Books'
-  manuscripts:
-    title: 'Journal Articles'    
-  conferences:
-    title: 'Conference Papers'
+portfolio_category:
+  macro-finance:
+    title: 'Macro-Finance'
+  applied-microeconometrics:
+    title: 'Applied-Microeconometrics'    
+  econometrics:
+    title: 'Econometrics'
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
