--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,7 +5,7 @@ Name Name:
   uri         : "http://name.com"
   email       : "name@name.com"
   bio         : "This is the first name."
-  avatar      : "chicago.jpg"
+  avatar      : "bio-photo-2.jpg"
   twitter     : "name"
   google_plus : "Name"
 
